--- a/index.html
+++ b/index.html
@@ -6,179 +6,91 @@
   <title>PMNP-IS Help Center</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+<body class="bg-gray-50 min-h-screen flex items-center justify-center">
 
-<style>
-  input, select, textarea {
-    width: 100%;
-    border: 1px solid #d1d5db; /* gray-300 */
-    border-radius: 0.5rem;     /* rounded-lg */
-    padding: 0.5rem 0.75rem;   /* px-3 py-2 */
-    background-color: white;
-    color: #1f2937;            /* gray-800 */
-    outline: none;
-    transition: all 0.2s;
-  }
-
-  input:focus, select:focus, textarea:focus {
-    border-color: #3b82f6;     /* blue-500 */
-    box-shadow: 0 0 0 2px #bfdbfe; /* ring-blue-200 */
-  }
-
-  label {
-    display: block;
-    margin-bottom: 0.25rem;
-    font-weight: 600;
-    color: #374151; /* gray-700 */
-    font-size: 0.875rem;
-  }
-</style>
-
-
-<body class="min-h-screen bg-gray-50 flex items-center justify-center p-4">
-  <div class="w-full max-w-2xl bg-white shadow-lg rounded-2xl p-6">
-    <div class="text-center mb-6">
-      <div class="flex justify-center mb-2">
-        <div class="bg-blue-600 text-white font-bold rounded-full w-10 h-10 flex items-center justify-center">PM</div>
-      </div>
-      <h1 class="text-2xl font-bold text-gray-800">PMNP-IS Help Center</h1>
+  <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-md">
+    <div class="flex flex-col items-center mb-6">
+      <div class="bg-blue-600 text-white text-2xl font-bold rounded-full w-14 h-14 flex items-center justify-center">PM</div>
+      <h1 class="text-2xl font-bold mt-3">PMNP-IS Help Center</h1>
       <p class="text-gray-500 text-sm">Submit a support ticket</p>
     </div>
 
     <form id="ticketForm" class="space-y-4">
-      <div class="mb-4">
-        <label class="block font-medium">Full Name</label>
-        <input type="text" id="name" name="name" required
-          class="w-full border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500" />
+      <div>
+        <label class="block text-sm font-medium">Full Name</label>
+        <input type="text" name="name" required class="mt-1 w-full border rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500" />
       </div>
 
       <div>
-        <label class="block font-medium">Email</label>
-        <input type="email" id="email" name="email" required
-          class="w-full border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500" />
+        <label class="block text-sm font-medium">Email</label>
+        <input type="email" name="email" required class="mt-1 w-full border rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500" />
       </div>
 
       <div>
-        <label class="block font-medium">Concern Type</label>
-        <select id="concern" name="concern" required
-          class="w-full border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500">
+        <label class="block text-sm font-medium">Concern Type</label>
+        <select name="category" id="category" required class="mt-1 w-full border rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500">
           <option value="">Select Concern Type</option>
           <option value="MPMO Support">MPMO Support</option>
           <option value="Provincial Support">Provincial Support</option>
           <option value="Regional Support">Regional Support</option>
-          <option value="NPMO">NPMO Technical Workstreams</option>
-          <option value="Other">Other</option>
+          <option value="NPMO Support">NPMO Support</option>
         </select>
       </div>
 
-      <!-- Dynamic Region / Province / Municipality -->
       <div id="regionWrapper" class="hidden">
-        <label class="block font-medium">Region</label>
-        <select id="region" name="region"
-          class="w-full border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500"></select>
+        <label class="block text-sm font-medium">Region</label>
+        <input type="text" name="region" class="mt-1 w-full border rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500" />
       </div>
 
       <div id="provinceWrapper" class="hidden">
-        <label class="block font-medium mt-2">Province</label>
-        <select id="province" name="province"
-          class="w-full border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500"></select>
+        <label class="block text-sm font-medium">Province</label>
+        <input type="text" name="province" class="mt-1 w-full border rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500" />
       </div>
 
       <div id="municipalityWrapper" class="hidden">
-        <label class="block font-medium mt-2">Municipality</label>
-        <select id="municipality" name="municipality"
-          class="w-full border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500"></select>
+        <label class="block text-sm font-medium">Municipality</label>
+        <input type="text" name="municipality" class="mt-1 w-full border rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500" />
       </div>
 
       <div>
-        <label class="block font-medium">Description</label>
-        <textarea id="description" name="description" rows="4" required
-          class="w-full border-gray-300 rounded-lg focus:ring-blue-500 focus:border-blue-500"></textarea>
+        <label class="block text-sm font-medium">Subject</label>
+        <input type="text" name="subject" required class="mt-1 w-full border rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500" />
       </div>
 
       <div>
-        <label class="block font-medium">Attachment (optional)</label>
-        <input type="file" id="file" name="files" multiple
-          class="w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4
-          file:rounded-full file:border-0 file:text-sm file:font-semibold
-          file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100" />
+        <label class="block text-sm font-medium">Description</label>
+        <textarea name="message" required rows="3" class="mt-1 w-full border rounded-md px-3 py-2 focus:ring-2 focus:ring-blue-500"></textarea>
       </div>
 
-      <button type="submit"
-        class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 rounded-lg">
-        Submit Ticket
-      </button>
+      <div>
+        <label class="block text-sm font-medium">Attachment(s)</label>
+        <input type="file" name="file" multiple class="mt-1 w-full border rounded-md px-3 py-2" />
+      </div>
 
-      <p id="statusMsg" class="text-center text-sm text-gray-500 mt-2"></p>
+      <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700 transition">Submit Ticket</button>
     </form>
+
+    <div id="toast" class="hidden mt-4 text-center text-white py-2 rounded-md"></div>
   </div>
 
   <script>
-    const scriptURL = "https://script.google.com/macros/s/AKfycbzjTZnaCsB0m4429FDNrZ2DQDlEEDlcH3gupN_wSXcBKFv-z8GhTN4beLcTbQ1eJW4_/exec"; // 🔗 Replace this with your deployed Apps Script Web App URL
+    const scriptURL = "https://script.google.com/macros/s/AKfycbztuQmXfCVLNYGNoiwgR8JWz8yLCE4SD0vgncvpESVaj6GpZqR5tHtZWWf3gpnSCzsu/exec";
 
-    // --- Load regionData.json for dropdowns ---
-    let psgcData = {};
-    fetch("regionData.json")
-      .then((res) => res.json())
-      .then((data) => {
-        psgcData = data;
-        populateRegions();
-      });
+    const form = document.getElementById("ticketForm");
+    const toast = document.getElementById("toast");
 
-    const regionSelect = document.getElementById("region");
-    const provinceSelect = document.getElementById("province");
-    const muniSelect = document.getElementById("municipality");
-
-    function populateRegions() {
-      regionSelect.innerHTML = `<option value="">Select Region</option>`;
-      Object.keys(psgcData).forEach(region => {
-        regionSelect.innerHTML += `<option value="${region}">${region}</option>`;
-      });
-    }
-
-    regionSelect.addEventListener("change", () => {
-      const selectedRegion = regionSelect.value;
-      provinceSelect.innerHTML = `<option value="">Select Province</option>`;
-      muniSelect.innerHTML = `<option value="">Select Municipality</option>`;
-
-      if (selectedRegion && psgcData[selectedRegion]) {
-        Object.keys(psgcData[selectedRegion]).forEach(province => {
-          provinceSelect.innerHTML += `<option value="${province}">${province}</option>`;
-        });
-      }
-    });
-
-    provinceSelect.addEventListener("change", () => {
-      const selectedRegion = regionSelect.value;
-      const selectedProvince = provinceSelect.value;
-      muniSelect.innerHTML = `<option value="">Select Municipality</option>`;
-
-      if (selectedRegion && selectedProvince && psgcData[selectedRegion][selectedProvince]) {
-        psgcData[selectedRegion][selectedProvince].forEach(muni => {
-          muniSelect.innerHTML += `<option value="${muni}">${muni}</option>`;
-        });
-      }
-    });
-
-    // --- Concern Type Logic (your requested rules) ---
-    const concernSelect = document.getElementById("concern");
+    // Category logic visibility
+    const categorySelect = document.getElementById("category");
     const regionWrapper = document.getElementById("regionWrapper");
     const provinceWrapper = document.getElementById("provinceWrapper");
     const municipalityWrapper = document.getElementById("municipalityWrapper");
 
-    concernSelect.addEventListener("change", () => {
-      const selected = concernSelect.value;
-
-      // Hide all by default
+    categorySelect.addEventListener("change", () => {
+      const selected = categorySelect.value;
       regionWrapper.classList.add("hidden");
       provinceWrapper.classList.add("hidden");
       municipalityWrapper.classList.add("hidden");
 
-      // Reset dropdowns
-      regionSelect.value = "";
-      provinceSelect.value = "";
-      muniSelect.value = "";
-
-      // Conditional visibility
       if (selected === "MPMO Support") {
         regionWrapper.classList.remove("hidden");
         provinceWrapper.classList.remove("hidden");
@@ -191,46 +103,29 @@
       }
     });
 
-    // --- Submit form ---
-    document.getElementById("ticketForm").addEventListener("submit", async (e) => {
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
-      const form = e.target;
-      const formData = new FormData();
-
-// Append all non-file inputs
-[...form.elements].forEach(el => {
-  if (el.name && el.type !== "file") {
-    formData.append(el.name, el.value);
-  }
-});
-
-// Append multiple files
-const fileInput = document.getElementById("file");
-if (fileInput.files.length > 0) {
-  for (const file of fileInput.files) {
-    formData.append("files[]", file);
-  }
-}
-
-const res = await fetch(scriptURL, { method: "POST", body: formData });
-      const statusMsg = document.getElementById("statusMsg");
-
-
-
-      statusMsg.textContent = "Submitting...";
+      const formData = new FormData(form);
       try {
         const res = await fetch(scriptURL, { method: "POST", body: formData });
-        const result = await res.json();
-        if (result.status === "success") {
-          statusMsg.textContent = `✅ Ticket submitted! Reference: ${result.ticketId}`;
+        const data = await res.json();
+        if (data.success) {
+          showToast(`✅ Ticket submitted! ID: ${data.ticketId}`, "bg-green-600");
           form.reset();
         } else {
-          statusMsg.textContent = "❌ Error submitting ticket. Please try again.";
+          showToast(`❌ ${data.error || "Submission failed"}`, "bg-red-600");
         }
       } catch (err) {
-        statusMsg.textContent = "⚠️ Network error. Please check your connection.";
+        showToast("❌ Network or server error", "bg-red-600");
       }
     });
+
+    function showToast(msg, color) {
+      toast.textContent = msg;
+      toast.className = `mt-4 text-center text-white py-2 rounded-md ${color}`;
+      toast.classList.remove("hidden");
+      setTimeout(() => toast.classList.add("hidden"), 4000);
+    }
   </script>
 </body>
 </html>
